# dlt-openlineage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: dlt-internals-research.md
src/dlt_openlineage/: __init__.py  constants.py  datasets.py  emitter.py  facets.py  install.py  tracker.py
tests/: conftest.py  test_datasets.py  test_emitter.py  test_integration.py  test_tracker.py
